--- a/julius.html
+++ b/julius.html
@@ -1,2 +1,2 @@
 <center><strong><H1>MIN KAT JULIUS</strong></H1></center>
-<img src="Kat.png" alt="Kat" height="500" width="500">
+<center><img src="Kat.png" alt="Kat" height="500" width="500"></center>
