--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <Center>
-<H1>Maine Coon</H1>
+<Strong><H1>Maine Coon</H1>
 <Br>
-<H2>- 10 kæmpefacts om verdens største huskat KAT</H2>
+<H2>- 10 kæmpefacts om verdens største huskat KAT</H2></Strong>
 <Br>
 <H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.
 Af: Mikkel Hede, 22. september 2017</H3>
+<Br>
 </Center>
-1. Maine Coon's er store - som i KÆMPESTORE
+<div style="margin-left:20%;margin-right:20%;">
+<Center><img src="" alt="Kat" height="500" width="500"></center>
+<1. Maine Coon's er store - som i KÆMPESTORE
 Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).
 2. Maine coon er den perfekte familiekat
 Selvom en Maine Coon med sin kæmpestørrelse kan virke intimiderende, gemmer der sig en meget kærlig og omgængelig sjæl i langt de fleste repræsentater for racen. En Maine Coon er kælen og selskabelig og trives generelt også godt med børn. På grund af kattens omgængelige sindelag bliver Maine Coon undertiden omtalt som hunden blandt katte. Maine Coon's er desuden en af de katteracer, som er lettest at få til at leve fredeligt sammen med andre husdyr.Det kan både være hunde, kaniner og endda også fugle.
@@ -36,3 +39,4 @@ De lyde, en Maine Coon frembringer, er noget for sig. De fleste katte har et lid
 Læs også: Populære navne til katte og hunde
 10. Maine Coon rekorder
 Den længste kat nogensinde er i følge Guiness World Records Maine Coon'en Stewie, der er blevet målt til 123 cm fra næsetip til halespids. Den tungeste Maine Coon, der nogensinde har været på vægten, vejede 15,9 kilo.
+</div>
