--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@ Af: Mikkel Hede, 22. september 2017</H3>
 <Br>
 </Center>
 <div style="margin-left:20%;margin-right:20%;">
-<Center><img src="" alt="Kat" height="500" width="500"></center>
-<1. Maine Coon's er store - som i KÆMPESTORE
-Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).
-2. Maine coon er den perfekte familiekat
-Selvom en Maine Coon med sin kæmpestørrelse kan virke intimiderende, gemmer der sig en meget kærlig og omgængelig sjæl i langt de fleste repræsentater for racen. En Maine Coon er kælen og selskabelig og trives generelt også godt med børn. På grund af kattens omgængelige sindelag bliver Maine Coon undertiden omtalt som hunden blandt katte. Maine Coon's er desuden en af de katteracer, som er lettest at få til at leve fredeligt sammen med andre husdyr.Det kan både være hunde, kaniner og endda også fugle.
-3. En Maine Coon er skabt til vintervejr
-Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
-Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.
-4. Maine Coon's oprindelse
-Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
+<Center><img src="Maine-coon-kat-kitten-pic.jpg" alt="Kat" height="500" width="500"></center>
+<H1> 1. Maine Coon's er store - som i KÆMPESTORE</H1>
+<P1>Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).</P1>
+<H1>2. Maine coon er den perfekte familiekat</H1>
+<P1>Selvom en Maine Coon med sin kæmpestørrelse kan virke intimiderende, gemmer der sig en meget kærlig og omgængelig sjæl i langt de fleste repræsentater for racen. En Maine Coon er kælen og selskabelig og trives generelt også godt med børn. På grund af kattens omgængelige sindelag bliver Maine Coon undertiden omtalt som hunden blandt katte. Maine Coon's er desuden en af de katteracer, som er lettest at få til at leve fredeligt sammen med andre husdyr.Det kan både være hunde, kaniner og endda også fugle.</P1>
+<H1>3. En Maine Coon er skabt til vintervejr</H1>
+<P1>Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
+Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</P1>
+<H1>4. Maine Coon's oprindelse</H1>
+<P1>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
 Coon rimer på det engelske ord for vaskebjørn: racoon. Der var faktisk tidligere folk, der troede, at Maine Coon'en på grund af dens udseende var beslægtet med vaskebjørnen. Dette kan være det sproghistoriske ophav til det andet led i kattens navn. Teorien om katte og vaskebjørnes slægtskab er dig i dag helt afvist. De to dyr har ingen genetisk mulighed for at parre sig.
 Der verserer også en myte om, at katten nedstammer fra 6 katte, som Marie Antoinette skibede over atlanten. Hun planlagde angiveligt selv at følge efter, men endte som bekendt sine dage i guillotinen under Den franske Revolution.
 Maine Coon har norske slægtninge
 Den nærmereste genetiske slægtning til Maine Coon'en er faktisk Norsk Skovkat. Derfor er der også en teori, der går ud på, at katten har "vikingeblod" i sig, og det kan faktisk godt have noget på sig.
-Maine ligger nemlig tæt på det område, som Leif den Lykkelige og andre vikinger besøgte og befolkede i en periode i vikingetiden, og som de selv kaldte for "Vinland". Ved den lejlighed kan de udmærket have efterladt nogle norske skovkatte, som derefter er blevet krydset med lokale katte.
-5. Racen var ved uddød
-Maine Coon's var populære tilbage i slutningen af 18-tallet. En af de første vindere af en katteudstilling i USA var faktisk en Maine Coon. I løbet af begyndelsen af 19-tallet gik katten dog af mode. Nu var det lige pludselig perserkatte, alle skulle have.
-Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt var uddød. Siden er det kun gået én vej, og i dag er racen en af de allermest udbredte både i USA og herhjemme i Danmark.
+Maine ligger nemlig tæt på det område, som Leif den Lykkelige og andre vikinger besøgte og befolkede i en periode i vikingetiden, og som de selv kaldte for "Vinland". Ved den lejlighed kan de udmærket have efterladt nogle norske skovkatte, som derefter er blevet krydset med lokale katte.</P1>
+<H1>5. Racen var ved uddød</H1>
+<P1>Maine Coon's var populære tilbage i slutningen af 18-tallet. En af de første vindere af en katteudstilling i USA var faktisk en Maine Coon. I løbet af begyndelsen af 19-tallet gik katten dog af mode. Nu var det lige pludselig perserkatte, alle skulle have.
+Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt var uddød. Siden er det kun gået én vej, og i dag er racen en af de allermest udbredte både i USA og herhjemme i Danmark.</P1>
 6. Priser på Main Coons
 Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.
 7. Maine Coon elsker vand
