--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Maine Coon'en er dog nok den huskat, der bedst kvalificerer til betegnelsen "van
 <P1>I gamle dage var der mange Maine Coon's, der havde 6 tæer på poterne. Det var dengang faktisk op imod 40 % af Maine Coon's, der var polydaktyle, som den harmløse genetiske "defekt" kaldes.
 I dag er denne procentdel kraftigt reduceret. Det skyldes ikke mindst, at polydaktyle Maine Coon's på forhånd er diskvalificeret til at deltage i skønhedskonkurrencer for katte. 6-tåede Maine Coons findes dog stadig. Der er også en kreds af katteavlere, der lobbyer for en særlig konkurrencekategori for flertåede katte.</P1>
 <Br>
-<H1>>9. Maine Coon kurrer som en due</H1
+<H1>9. Maine Coon kurrer som en due</H1
 <P1>De lyde, en Maine Coon frembringer, er noget for sig. De fleste katte har et lidt større reportoire end et standard miau. En Maine Coon har et helt symfoniorkester til sin rådighed. De kan både kvidre og kurre som en due. De har også forskellige agiterede kald, når de for eksempel har spottet en fugl, som de godt kunne tænke sig at gå i kødet på. Dette kan både lyde som en trillen og som en lille hunds bjæffen.
 Læs også: Populære navne til katte og hunde</P1>
 <Br>
