--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <Br>
 <H2>- 10 kæmpefacts om verdens største huskat KAT</H2></Strong>
 <Br>
-<H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.
+<H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H3>
 <Br>
-Af: Mikkel Hede, 22. september 2017</H3>
+Af: Mikkel Hede, 22. september 2017
 <Br>
 </Center>
 <Center><img src="Maine-Coon-Cat-Kitten-Pic.jpg" alt="Kat" height="500" width="500"></center>
