--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@ Der verserer også en myte om, at katten nedstammer fra 6 katte, som Marie Antoi
 Maine Coon har norske slægtninge
 Den nærmereste genetiske slægtning til Maine Coon'en er faktisk Norsk Skovkat. Derfor er der også en teori, der går ud på, at katten har "vikingeblod" i sig, og det kan faktisk godt have noget på sig.
 Maine ligger nemlig tæt på det område, som Leif den Lykkelige og andre vikinger besøgte og befolkede i en periode i vikingetiden, og som de selv kaldte for "Vinland". Ved den lejlighed kan de udmærket have efterladt nogle norske skovkatte, som derefter er blevet krydset med lokale katte.</P1>
+</div>
 <Br>
+<div style="background-color:black;color:white; padding 2%">
 <H1>5. Racen var ved uddød</H1>
 <P1>Maine Coon's var populære tilbage i slutningen af 18-tallet. En af de første vindere af en katteudstilling i USA var faktisk en Maine Coon. I løbet af begyndelsen af 19-tallet gik katten dog af mode. Nu var det lige pludselig perserkatte, alle skulle have.
 Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt var uddød. Siden er det kun gået én vej, og i dag er racen en af de allermest udbredte både i USA og herhjemme i Danmark.</P1>
+</div>
 <Br>
+<div style="background-color:black;color:white; padding 2%">
 <H1>6. Priser på Main Coons</H1>
 <P1>Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.</P1>
 <Br>
