--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ Af: Mikkel Hede, 22. september 2017
 <H1>3. En Maine Coon er skabt til vintervejr</H1>
 <P1>Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</P1>
+</div>
 <Br> 
-<div style="background-color:black;color:white; padding 2%">
+<div style="background-color:black;color:white; padding 2%;margin-left:20%;margin-right:20%;">
 <Center><img src="main-coon-har-oerer.jpg" alt="Kat" height="500" width="500"></center>
 <H1>4. Maine Coon's oprindelse</H1>
 <P1>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
