--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ Af: Mikkel Hede, 22. september 2017
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</P1>
 </div>
 <Br> 
-<div style="background-color:black;color:white; padding 2%;margin-left:20%;margin-right:20%;">
+<div style="background-color:black;color:white; padding 2%;">
+  <div style="margin-left:20%;margin-right:20%;">
 <Center><img src="main-coon-har-oerer.jpg" alt="Kat" height="500" width="500"></center>
 <H1>4. Maine Coon's oprindelse</H1>
 <P1>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
@@ -38,6 +39,7 @@ Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt 
 <H1>6. Priser på Main Coons</H1>
 <P1>Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.</P1>
 <Br>
+  </div>
 </div>
 <H1>7. Maine Coon elsker vand</H1>
 <P1>Katte er ikke kendt som de store vandelskere. Alle katteracer kan ganske vist svømme, når de er tvunget til det, men der er en god grund til, at det hedder en "vandhund" og ikke en "vandkat".
