--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt 
 <Br>
   </div>
 </div>
+  <div style="margin-left:20%;margin-right:20%;">
 <H1>7. Maine Coon elsker vand</H1>
 <P1>Katte er ikke kendt som de store vandelskere. Alle katteracer kan ganske vist svømme, når de er tvunget til det, men der er en god grund til, at det hedder en "vandhund" og ikke en "vandkat".
 Maine Coon'en er dog nok den huskat, der bedst kvalificerer til betegnelsen "vandkat". Maine Coon's er nemlig meget fascinerede af vand. Måske skyldes det, at deres tætte sneegnede pels er delvis vandskyende. Nogle Maine Coon's kan finde på at vende bunden i vejret på vandskålen for at lege med vandet, andre er faste gæster med øjnene på stilke, når bruseren er tændt, eller der bliver skyllet ud i toilettet.</P1>
