--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <Center>
 <Strong><H1>Maine Coon</H1>
 <Br>
+<ul>
+      <li><a href="index.html">Home</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Gå til kapitel</a>
+        <div class="dropdown-content">
+          <a href="#kap1">Kapitel 1</a>
+          <a href="#kap2">Kapitel 2</a>
+          <a href="#kap3">Kapitel 3</a>
+          <a href="#kap4">kapitel 4</a>
+          <a href="#kap5">kapitel 5</a>
+          <a href="#kap6">kapitel 6</a>
+          <a href="#kap7">kapitel 7</a>
+          <a href="#kap8">kapitel 8</a>
+          <a href="#kap9">kapitel 9</a>
+          <a href="#kap10">kapitel 10</a>
+      </li>
 <H2>- 10 kæmpefacts om verdens største huskat KAT</H2></Strong>
 <Br>
 <H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H3>
