--- a/index.html
+++ b/index.html
@@ -1,3 +1,83 @@
+<!DOCTYPE html>
+<html lang="da">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>om Maine Coone</title>
+  <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+
+  <style>
+        html{
+font-family: "Gill Sans", sans-serif;
+  scroll-behavior: smooth;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow:hidden;
+  background-color: #f1f1f1;
+}
+
+li {
+    float: left;
+}
+
+  li a, .dropbtn {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+  text-decoration: underline;
+  background: #111;
+  color: white;
+}
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+#kap3{
+  color: red;
+}
+
+.subheading
+{
+  font-style: italic;
+  font-size: 25px;
+}
+  </style>
+
+</head>
+
+<body>
 <div style="margin-left:20%;margin-right:20%;">
 <Center>
 <Strong><H1>Maine Coon</H1>
@@ -73,3 +153,4 @@ Læs også: Populære navne til katte og hunde</P1>
 <H1 id="kap10">10. Maine Coon rekorder</H1>
 <P1>Den længste kat nogensinde er i følge Guiness World Records Maine Coon'en Stewie, der er blevet målt til 123 cm fra næsetip til halespids. Den tungeste Maine Coon, der nogensinde har været på vægten, vejede 15,9 kilo.</P1>
 </div>
+</body>
