--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ li.dropdown {
           <a href="#kap8">kapitel 8</a>
           <a href="#kap9">kapitel 9</a>
           <a href="#kap10">kapitel 10</a>
+        </div>
       </li>
+</ul>
 <H2>- 10 kæmpefacts om verdens største huskat KAT</H2></Strong>
 <Br>
 <H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H3>
