--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ li.dropdown {
 <Center>
 <Strong><H1>Maine Coon</H1>
 <Br>
+  <Center><img src="maine-coon-race.jpg" alt="Kat" height="500" width="500"></center>
 <ul>
       <li><a href="index.html">Home</a></li>
       <li class="dropdown">
