--- a/index.html
+++ b/index.html
@@ -148,12 +148,14 @@ Maine Coon'en er dog nok den huskat, der bedst kvalificerer til betegnelsen "van
 <H1 id="kap8">8. Nogle Maine Coon's har 6 tæer</H1>
 <P1>I gamle dage var der mange Maine Coon's, der havde 6 tæer på poterne. Det var dengang faktisk op imod 40 % af Maine Coon's, der var polydaktyle, som den harmløse genetiske "defekt" kaldes.
 I dag er denne procentdel kraftigt reduceret. Det skyldes ikke mindst, at polydaktyle Maine Coon's på forhånd er diskvalificeret til at deltage i skønhedskonkurrencer for katte. 6-tåede Maine Coons findes dog stadig. Der er også en kreds af katteavlere, der lobbyer for en særlig konkurrencekategori for flertåede katte.</P1>
-<Br>
+<Center><img src="maine-coon-pels-jpg" alt="Kat" height="500" width="500"></center>
+    <Br>
 <H1 id="kap9">9. Maine Coon kurrer som en due</H1
 <P1>De lyde, en Maine Coon frembringer, er noget for sig. De fleste katte har et lidt større reportoire end et standard miau. En Maine Coon har et helt symfoniorkester til sin rådighed. De kan både kvidre og kurre som en due. De har også forskellige agiterede kald, når de for eksempel har spottet en fugl, som de godt kunne tænke sig at gå i kødet på. Dette kan både lyde som en trillen og som en lille hunds bjæffen.
 Læs også: Populære navne til katte og hunde</P1>
 <Br>
 <H1 id="kap10">10. Maine Coon rekorder</H1>
 <P1>Den længste kat nogensinde er i følge Guiness World Records Maine Coon'en Stewie, der er blevet målt til 123 cm fra næsetip til halespids. Den tungeste Maine Coon, der nogensinde har været på vægten, vejede 15,9 kilo.</P1>
-</div>
+<Center><img src="stor-maine-coon.jpg" alt="Kat" height="500" width="500"></center>
+  </div>
 </body>
